<resources>
    <string name="app_name">Rent management</string>
    <string name="land_owner">Land Owner</string>
    <string name="tenants">Tenants</string>

    <string name="textview">This will Help to in Lots of ways thank u for using</string>
    <string name="butttttton">বাটনটি চাপুন</string>

    <string name="t2">আপনার মোবাইল নাম্বার প্রবেশ করুন</string>
    <string name="owner">বাড়ির মালিক</string>
    <string name="t1">আপনার নাম প্রবেশ করুন</string>
    <string name="name">নাম</string>
    <string name="number">আপনার
মোবাইল নম্বর প্রবেশ করুন</string>
    <string name="num">নাম্বার</string>
    <string name="buttontoenter">Button</string>
    <string name="presstoenter">নিবন্ধন করুন</string>
    <string name="rem">REM সিস্টেমে স্বাগত জানাই</string>
    <string name="ifownerthenpress">যদি আপনি বাড়ির মালিক হন তবে নীচের আইকন টিপুন</string>
    <string name="tenantnote">যদি আপনি ভাড়াটে হন তবে নিচের আইকনে টিপুন</string>
    <string name="welcome_to_rems">Welcome to REMS</string>
    <string name="enter_you_name">Enter your name</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="press_to_proceed">Press to proceed</string>
    <string name="rems">REMS</string>
    <string name="rems_title">REMS</string>
    <string name="number_confirm">আবার নম্বর লিখুন</string>
    <string name="register.toast">Registered successfully</string>
    <string name="Welcome_note">REMS</string>
    <string name="ownerlogin">Enter your name</string>
    <string name="owner_name">Name</string>
    <string name="owner_number">Enter your number</string>
    <string name="enter_your_number_again">Enter your number again</string>
    <string name="nameT">Name</string>
    <string name="numberT">Number</string>
    <string name="numberTT">Number</string>
    <string name="ifregistered">নিবন্ধিত হলে নীচের বাটন টিপুন</string>
    <string name="nummbers">নাম্বার</string>
    <string name="button_login">লগইন</string>
    <string name="writename">নাম লিখুন</string>
    <string name="nummmmmmb">আপনার মোবাইল নম্বর প্রবেশ করুন</string>
    <string name="ownerssss">নাম</string>
    <string name="mainpage">লগইন</string>
    <string name="numberrss">নাম্বার</string>
</resources>
