<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".Tenant">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:text="@string/welcome_to_rems"
        android:textStyle="bold"
        android:textColor="#000001"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="229dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:text="@string/enter_you_name"
        android:textColor="#000001"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tname"
        android:layout_width="276dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"
        android:drawableLeft="@drawable/username"
        android:background="@drawable/round_edit"
        android:ems="10"
        android:hint="@string/nameT"
        android:inputType="textPersonName"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="254dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="284dp"
        android:text="@string/enter_your_number"
        android:textColor="#000001"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tnumber"
        android:layout_width="264dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="368dp"
        android:background="@drawable/round_edit"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/numberT"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/registers"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="604dp"
        android:background="@drawable/round_button"
        android:text="@string/press_to_proceed"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="322dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="436dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_your_number_again"
        android:textColor="#000001"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/ctnumber"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="521dp"
        android:background="@drawable/round_edit"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/numberTT"
        android:inputType="numberPassword" />
</RelativeLayout>