<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".LandOwnerActv">


    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="108dp"
        android:text="@string/t1"
        android:textColor="#000001"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/username"
        android:layout_marginTop="184dp"
        android:background="@drawable/round_edit"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="265dp"
        android:text="@string/number"
        android:textColor="#000001"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/number"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="334dp"
        android:drawableLeft="@drawable/password"
        android:background="@drawable/round_edit"
        android:ems="10"
        android:hint="@string/num"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:textStyle="bold"
        android:layout_marginTop="553dp"
        android:text="@string/presstoenter" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rems"
        android:textStyle="bold"
        android:textColor="#000001"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_marginTop="402dp"
        android:text="@string/number_confirm"
        android:textColor="#000001"
        android:layout_centerHorizontal="true"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/cnumber"
        android:layout_width="276dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="468dp"
        android:drawableLeft="@drawable/password"
        android:background="@drawable/round_edit"
        android:ems="10"
        android:hint="নাম্বার"
        android:inputType="numberPassword" />


</RelativeLayout>